# SmartBot

./: .gitignore  README.md  config_dev.toml  constants.py  main.py  pyproject.toml  requirements.txt
app/: bot.py  config.py  paths.py  plugin_loader.py
app/handlers/: callbacks.py  commands.py
app/plugins/: message.py
app/plugins/commands/: start.py
app/utils/: base_handler.py
plugins/: message.py
plugins/callbacks/: go_back.py
plugins/commands/: button.py  exit.py  help.py  start.py
smartbot/: bot.py  config.py  paths.py  plugin_loader.py
smartbot/handlers/: callbacks.py  commands.py
smartbot/utils/: buttons.py  context.py  handler.py  menu.py
